custom/less/section-docs.less
/* ... */
.doc-content {

  .link-block .dropdown-header {
    .dropdown_header;
    font-size: 12px;
    padding: 0;
  }

  .img-bordered {
    /* use outline in place of border */
    outline: 1px solid #999;
  }

  p,
  li {
    line-height: 1.8;
    // Prepared for inline comment system
    position: relative;
    // padding-right: 50px;

    img {
      max-width: 100%;
    }

    // When inline comments is active
    &.on {
      background: #fffdd0;
    }
  }

  p {
    margin-bottom: 1.5em;
  }

  p+ul {
    margin: -1em 0 1.5em 0;
  }

  pre {
    margin-bottom: 18px;
    // fix inline comment indicator not showing in overflowed container
    overflow: visible;
  }

  sup {
    font-size: 0.83em;
    vertical-align: super;
    line-height: 0;
  }

  // text-underline
  u {
    text-decoration: none;
    border-bottom: 1px;
    border-bottom-style: solid;
    /* DO NOT USE short-hand syntax */
    border-bottom-color: inherit;
    padding-bottom: 2px;
  }

  em {
    font-style: normal;
    text-emphasis: dot #bbb;
    text-emphasis-position: under right;
  }

  dt {
    margin-top: 1.5em;
  }

  code {
    background-color: rgba(0,0,0,0.04);
    color: #808080;
  }
  pre code {
    background-color: transparent;
  }

  a code, dt code, h1 code, h2 code, h3 code, h4 code, h5 code {
    color: inherit;
    background-color: transparent;
  }


  dt code, h1 code, h2 code, h3 code, h4 code, h5 code {
    padding:0;
  }

  samp {
    font-size: 96%;
    white-space: pre-wrap;

    &.bubble {
      position: relative;
      width: 50%;
      padding: 1em;
      background: @bubble-color;
      border-radius: 6px;
      display:block;

      &:after {
        content: '';
        position: absolute;
        border-style: solid;
        border-width: 11px 11px 11px 0;
        border-color: transparent @bubble-color;
        display: block;
        width: 0;
        /* FF: DO NOT REMOVE HEIGHT */
        height: 0;
        z-index: 1;
        left: -11px;
        top: 31%;
      }
    }
  }

  .callout-info {
    color: #666;
    background-color: #f2f2f2;
    border-color: none;
  }

  .callout {
    padding: 1.2em;
    border-left: none;
    border-radius: @general-radius;

    a {
        font-weight: inherit;
    }
  }

  .prettyprint {

    .com {
      color: #999;
      color: rgba(0,0,0,0.35);
      font-style: normal;
    }
  }

  // Tables
  table {
    display: table;
    margin: 1.8em 0;
    border-collapse: separate;
    border-spacing: 0;
    width: 100%;
    border: @table-border;
    border-radius: @general-radius;
    -moz-border-radius: @general-radius;

    td, th {
      padding: 8px 13px;
      border-top: @table-border;
      border-left: @table-border;
      border-radius: 0;
    }

    th {
      white-space: nowrap;
      background-color: #f7f7f7;
    }

    td:first-child,
    th:first-child {
      border-left: none;
    }

    tr:first-child td, 
    tr:first-child th {
      border-top: none;
    }

    thead~tbody tr:first-child td, 
    thead~tbody tr:first-child th {
      border-top: @table-border;
    }

    tr:first-child td:first-child,
    tr:first-child th:first-child {
      border-top-left-radius: @table-inner-radius;
    }

    thead~tbody tr:first-child td:first-child {
      border-top-left-radius: 0;
    }

    tr:first-child td:last-child,
    tr:first-child th:last-child {
      border-top-right-radius: @table-inner-radius;
    }

    thead~tbody tr:first-child td:last-child {
      border-top-right-radius: 0;
    }

    tr:last-child th:first-child {
      border-bottom-left-radius: @table-inner-radius;
    }
    
    tr:last-child td:last-child, 
    tr:last-child th:last-child {
      border-bottom-right-radius: @table-inner-radius;
    }
  }

  // Headings
  > h1 {
    font-size: 32px;
    font-weight: 300;
    padding-top: 90px;
    margin-top: 0px;
    margin-bottom: 20px;
    .font-logo;
    font-weight: bold;

    // We add extra space for top heading before GitHub contributers loaded
    // This could help avoid FOUT issue when page is loading
    @github-avatar-height: 24px;
    @heading-margin-bottom-offset: 10px;
    padding-bottom: (100px + @github-avatar-height + @heading-margin-bottom-offset + 3px) !important;
    border-bottom: 1px solid @gray-lighter;

    a {
      .header-link;
      color: @base-font-color!important;
    }

    // When GitHub contributers loaded, add a special class to remove extra space
    &.github-contributors-loaded {
      padding-bottom: 0 !important;
      margin-bottom: @heading-margin-bottom-offset;
      border-bottom: none;
    }
  }

  h2 {
    font-size: 22px;
    font-weight: 300;
    line-height: 1.2;
    padding-top: 24px;
    padding-bottom: 18px;
    margin: 17px 0;
    margin-top: 40px;
    border-bottom: 1px solid #eee;

    a {
      .header-link;
    }
  }

  h3 {
    font-size: 18px;
    font-weight: 300;
    line-height: 1.4;
    padding-top: 24px;
    margin-top: 30px;
    margin-bottom: 15px;

    a {
      .header-link;
    }
  }

  h4 {
    font-size: 16px;
    font-weight: 300;
    line-height: 1.4;
    padding-top: 24px;
    margin-top: 20px;

    a {
      .header-link;
    }
  }

  h5 {
    line-height: 1.4;
    padding-top: 24px;
    margin-top: 20px;

    a {
      .header-link;
    }
  }

  h6 {
    line-height: 1.4;
    padding-top: 24px;
    margin-top: 20px;

    a {
      .header-link;
    }
  }

  h2,
  h3,
  h4,
  h5,
  h6 {
    .header-link;

    a[href^="#"] {
      position: relative;

      &:after {
        position: absolute;
        top: -.1em;
        right: 100%;
        content: '§';
        padding: 0 .2em;
        opacity: .5;

        @media (max-width: @screen-xs-max) {
          display: none;
        }
      }
    }
  }
}


// Nav
.dashboard-subnav.navbar {
  margin-bottom: 0;
}
/* ... */

